<package format="3">
<name>feedback</name>
<version>0.0.0</version>
<description>Custom messages for my application.</description>
<maintainer email="user@example.com">Your Name</maintainer>
<license>Apache License 2.0</license>
<!-- Declare that this package is a ROS interface package -->
<member_of_group>rosidl_interface_packages</member_of_group>
<buildtool_depend>ament_cmake</buildtool_depend>
<!-- Dependencies for message generation -->
<build_depend>rosidl_default_generators</build_depend>
<build_depend>builtin_interfaces</build_depend>
<exec_depend>rosidl_default_runtime</exec_depend>
<exec_depend>builtin_interfaces</exec_depend>
<export>
<build_type>ament_cmake</build_type>
</export>
</package>
